(lang dune 3.5)

(cram enable)

(using menhir 2.1)

(generate_opam_files true)

(name sherlodoc)

(source (github art-w/sherlodoc))

(authors "Arthur Wendling")

(maintainers "art.wendling@gmail.com")

(license MIT)

(package
 (name sherlodoc)
 (synopsis "Fuzzy search in OCaml documentation")
 (depends
  (ocaml (>= 4.0.8))
  (cmdliner (>= 1.2.0))
  (bigstringaf (>= 0.9.1))
  (decompress (>= 1.5.3))
  (base64 (>= 3.5.1))
  (fpath (>= 0.7.3))
  (lwt (>= 5.7.0))
  (menhir (>= 20230608))
  (odoc (>= 2.4.0))
  (tyxml (>= 4.6.0))
  (brr (>= 0.0.6))
  (ppx_blob (>= 0.7.2))
  (alcotest :with-test)
  (odig :with-test)
  ;; Packages whose odocls are indexed in tests
  (alcotest (and :with-test (= 1.7.0)))
  (ancient (and :with-test (= 0.9.1)))
  (angstrom (and :with-test (= 0.15.0)))
  (angstrom-lwt-unix (and :with-test (= 0.15.0)))
  (arp (and :with-test (= 3.1.0)))
  (asn1-combinators (and :with-test (= 0.2.6)))
  (astring (and :with-test (= 0.8.5)))
  (b0 (and :with-test (= 0.0.5)))
  (base (and :with-test (= v0.16.3)))
  (base64 (and :with-test (= 3.5.1)))
  (bigarray-compat (and :with-test (= 1.1.0)))
  (bigarray-overlap (and :with-test (= 0.2.1)))
  (bigstringaf (and :with-test (= 0.9.1)))
  (biniou (and :with-test (= 1.2.2)))
  (bos (and :with-test (= 0.2.1)))
  (brr (and :with-test (= 0.0.6)))
  (camlp-streams (and :with-test (= 5.0.1)))
  (caqti (and :with-test (= 1.9.0)))
  (caqti-lwt (and :with-test (= 1.9.0)))
  (checkseum (and :with-test (= 0.5.2)))
  (chrome-trace (and :with-test (= 3.11.1)))
  (cmdliner (and :with-test (= 1.2.0)))
  (cppo (and :with-test (= 1.6.9)))
  (crunch (and :with-test (= 3.3.1)))
  (csexp (and :with-test (= 1.5.2)))
  (cstruct (and :with-test (= 6.2.0)))
  (cstruct-lwt (and :with-test (= 6.2.0)))
  (dap (and :with-test (= 1.0.6)))
  (decompress (and :with-test (= 1.5.3)))
  (digestif (and :with-test (= 1.1.4)))
  (domain-name (and :with-test (= 0.4.0)))
  (dream (and :with-test (= 1.0.0~alpha5)))
  (dream-httpaf (and :with-test (= 1.0.0~alpha2)))
  (dream-pure (and :with-test (= 1.0.0~alpha2)))
  (dum (and :with-test (= 1.0.3)))
  (dune (and :with-test (= 3.12.1)))
  (dune-build-info (and :with-test (= 3.11.1)))
  (dune-configurator (and :with-test (= 3.11.1)))
  (dune-rpc (and :with-test (= 3.11.1)))
  (duration (and :with-test (= 0.2.1)))
  (dyn (and :with-test (= 3.11.1)))
  (earlybird (and :with-test (= 1.2.1)))
  (easy-format (and :with-test (= 1.3.4)))
  (either (and :with-test (= 1.0.0)))
  (eqaf (and :with-test (= 0.9)))
  (ethernet (and :with-test (= 3.2.0)))
  (faraday (and :with-test (= 0.8.2)))
  (faraday-lwt (and :with-test (= 0.8.2)))
  (faraday-lwt-unix (and :with-test (= 0.8.2)))
  (fiber (and :with-test (= 3.7.0)))
  (fix (and :with-test (= 20230505)))
  (fmt (and :with-test (= 0.9.0)))
  (fpath (and :with-test (= 0.7.3)))
  (gen (and :with-test (= 1.1)))
  (gg (and :with-test (= 1.0.0)))
  (gluten (and :with-test (= 0.5.0)))
  (gmap (and :with-test (= 0.3.0)))
  (graphql (and :with-test (= 0.14.0)))
  (graphql-lwt (and :with-test (= 0.14.0)))
  (graphql_parser (and :with-test (= 0.14.0)))
  (hkdf (and :with-test (= 1.0.4)))
  (hmap (and :with-test (= 0.8.1)))
  (ipaddr (and :with-test (= 5.5.0)))
  (ipaddr-cstruct (and :with-test (= 5.5.0)))
  (iter (and :with-test (= 1.8)))
  (jane-street-headers (and :with-test (= v0.16.0)))
  (js_of_ocaml (and :with-test (= 5.4.0)))
  (js_of_ocaml-compiler (and :with-test (= 5.4.0)))
  (js_of_ocaml-ppx (and :with-test (= 5.4.0)))
  (js_of_ocaml-toplevel (and :with-test (= 5.4.0)))
  (jst-config (and :with-test (= v0.16.0)))
  (ke (and :with-test (= 0.6)))
  (lambdasoup (and :with-test (= 1.0.0)))
  (logs (and :with-test (= 0.7.0)))
  (lru (and :with-test (= 0.3.1)))
  (lwt (and :with-test (= 5.7.0)))
  (lwt-dllist (and :with-test (= 1.0.1)))
  (lwt_ppx (and :with-test (= 2.1.0)))
  (lwt_react (and :with-test (= 1.2.0)))
  (lwt_ssl (and :with-test (= 1.2.0)))
  (macaddr (and :with-test (= 5.5.0)))
  (macaddr-cstruct (and :with-test (= 5.5.0)))
  (magic-mime (and :with-test (= 1.3.1)))
  (markup (and :with-test (= 1.0.3)))
  (mdx (and :with-test (= 2.3.1)))
  (menhir (and :with-test (= 20230608)))
  (menhirLib (and :with-test (= 20230608)))
  (menhirSdk (and :with-test (= 20230608)))
  (merlin-lib (and :with-test (= 4.12-414)))
  (metrics (and :with-test (= 0.4.1)))
  (mimic (and :with-test (= 0.0.6)))
  (mirage-clock (and :with-test (= 4.2.0)))
  (mirage-crypto (and :with-test (= 0.11.2)))
  (mirage-crypto-ec (and :with-test (= 0.11.2)))
  (mirage-crypto-pk (and :with-test (= 0.11.2)))
  (mirage-crypto-rng (and :with-test (= 0.11.2)))
  (mirage-crypto-rng-lwt (and :with-test (= 0.11.2)))
  (mirage-flow (and :with-test (= 3.0.0)))
  (mirage-kv (and :with-test (= 6.1.1)))
  (mirage-net (and :with-test (= 4.0.0)))
  (mirage-os-shim (and :with-test (= 3.1.0)))
  (mirage-random (and :with-test (= 3.0.0)))
  (mirage-time (and :with-test (= 3.0.0)))
  (mtime (and :with-test (= 2.0.0)))
  (multipart_form (and :with-test (= 0.5.0)))
  (multipart_form-lwt (and :with-test (= 0.5.0)))
  (note (and :with-test (= 0.0.3)))
  (num (and :with-test (= 1.4)))
  (ocaml (and :with-test (= 4.14.1)))
  (ocaml-base-compiler (and :with-test (= 4.14.1)))
  (ocaml-compiler-libs (and :with-test (= v0.12.4)))
  (ocaml-lsp-server (and :with-test (= 1.17.0)))
  (ocaml-syntax-shims (and :with-test (= 1.0.0)))
  (ocaml-version (and :with-test (= 3.6.2)))
  (ocamlbuild (and :with-test (= 0.14.2)))
  (ocamlc-loc (and :with-test (= 3.11.1)))
  (ocamlformat (and :with-test (= 0.26.1)))
  (ocamlformat-lib (and :with-test (= 0.26.1)))
  (ocamlformat-rpc-lib (and :with-test (= 0.26.1)))
  (ocamlgraph (and :with-test (= 2.1.0)))
  (ocp-indent (and :with-test (= 1.8.1)))
  (ocplib-endian (and :with-test (= 1.2)))
  (octavius (and :with-test (= 1.2.2)))
  (odig (and :with-test (= 0.0.9)))
  (odoc (and :with-test (= 2.4.0)))
  (odoc-parser (and :with-test (= 2.4.0)))
  (omd (and :with-test (= 2.0.0~alpha4)))
  (opam-core (and :with-test (= 2.1.5)))
  (optint (and :with-test (= 0.3.0)))
  (ordering (and :with-test (= 3.11.1)))
  (parsexp (and :with-test (= v0.16.0)))
  (path_glob (and :with-test (= 0.3)))
  (pbkdf (and :with-test (= 1.2.0)))
  (pecu (and :with-test (= 0.6)))
  (pp (and :with-test (= 1.2.0)))
  (pprint (and :with-test (= 20230830)))
  (ppx_assert (and :with-test (= v0.16.0)))
  (ppx_base (and :with-test (= v0.16.0)))
  (ppx_blob (and :with-test (= 0.7.2)))
  (ppx_cold (and :with-test (= v0.16.0)))
  (ppx_compare (and :with-test (= v0.16.0)))
  (ppx_derivers (and :with-test (= 1.2.1)))
  (ppx_deriving (and :with-test (= 5.2.1)))
  (ppx_deriving_yojson (and :with-test (= 3.7.0)))
  (ppx_enumerate (and :with-test (= v0.16.0)))
  (ppx_expect (and :with-test (= v0.16.0)))
  (ppx_globalize (and :with-test (= v0.16.0)))
  (ppx_hash (and :with-test (= v0.16.0)))
  (ppx_here (and :with-test (= v0.16.0)))
  (ppx_inline_test (and :with-test (= v0.16.1)))
  (ppx_optcomp (and :with-test (= v0.16.0)))
  (ppx_sexp_conv (and :with-test (= v0.16.0)))
  (ppx_yojson_conv_lib (and :with-test (= v0.16.0)))
  (ppxlib (and :with-test (= 0.31.0)))
  (prettym (and :with-test (= 0.0.3)))
  (psq (and :with-test (= 0.2.1)))
  (ptime (and :with-test (= 1.1.0)))
  (randomconv (and :with-test (= 0.1.3)))
  (re (and :with-test (= 1.11.0)))
  (react (and :with-test (= 1.2.2)))
  (result (and :with-test (= 1.5)))
  (rresult (and :with-test (= 0.7.0)))
  (sedlex (and :with-test (= 3.2)))
  (seq (and :with-test (= base)))
  (sexplib (and :with-test (= v0.16.0)))
  (sexplib0 (and :with-test (= v0.16.0)))
  (spawn (and :with-test (= v0.15.1)))
  (ssl (and :with-test (= 0.7.0)))
  (stdio (and :with-test (= v0.16.0)))
  (stdlib-shims (and :with-test (= 0.3.0)))
  (stdune (and :with-test (= 3.11.1)))
  (stringext (and :with-test (= 1.6.0)))
  (tcpip (and :with-test (= 8.0.0)))
  (time_now (and :with-test (= v0.16.0)))
  (tls (and :with-test (= 0.17.3)))
  (tls-mirage (and :with-test (= 0.17.3)))
  (topkg (and :with-test (= 1.0.7)))
  (tyxml (and :with-test (= 4.6.0)))
  (uchar (and :with-test (= 0.0.2)))
  (unstrctrd (and :with-test (= 0.3)))
  (uri (and :with-test (= 4.4.0)))
  (uucp (and :with-test (= 15.1.0)))
  (uunf (and :with-test (= 15.1.0)))
  (uuseg (and :with-test (= 15.1.0)))
  (uutf (and :with-test (= 1.0.3)))
  (vg (and :with-test (= 0.9.4)))
  (x509 (and :with-test (= 0.16.5)))
  (xdg (and :with-test (= 3.11.1)))
  (yojson (and :with-test (= 2.1.1)))
  (zarith (and :with-test (= 1.13)))
 )
 (depopts
  (dream (>= 1.0.0~alpha5))
  (ancient (>= 0.9.1))))
